force-app/main/default/objects/GTM_Assessment_Config__mdt/GTM_Assessment_Config__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Config</label>
    <pluralLabel>GTM Assessment Configs</pluralLabel>
</CustomObject>