force-app/main/default/objects/GTM_Assessment_Config__mdt/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <description>Task or Event. Task is the conventional choice for logging a submission.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>