force-app/main/default/objects/GTM_Assessment_Config__mdt/fields/Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead__c</fullName>
    <label>Create Lead</label>
    <description>Find-or-create a Lead by email and log the submission as an activity.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>