force-app/main/default/objects/GTM_Assessment_Config__mdt/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Which offering this config row applies to. Blank means
        "the default for every offering with no row of its own" -- the
        existing GTM_Assessment_Config.Default record stays blank and
        becomes that fallback. Matches GTM_Offering__mdt.Offering_Key__c.
    </description>
    <length>80</length>
    <type>Text</type>
</CustomField>