force-app/main/default/objects/GTM_Assessment_Config__mdt/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <label>Send Email</label>
    <description>Email the submission to Notify Email.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>